--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "framer-motion": "^11.3.30",
     "next": "14.2.5",
     "postgres": "^3.4.4",
+    "qr-creator": "^1.0.0",
     "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@types/async": "^3.2.24",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "async": "^3.2.6",
     "crypto-js": "^4.2.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
