--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@vercel/kv": "^2.0.0",
     "apexcharts": "^3.52.0",
     "framer-motion": "^11.3.30",
     "next": "14.2.5",
