--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "next": "14.2.5",
     "postgres": "^3.4.4",
     "qr-creator": "^1.0.0",
+    "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-qr-code": "^2.0.15",
+    "react-qr-scanner": "^1.0.0-alpha.11"
   },
   "devDependencies": {
     "@types/async": "^3.2.24",
